更新JVM